--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="jumbotron text-center" style="margin-top : 11%">
             <img src="assets/svce.png" alt="svce logo" width="20%" height="20%" />
             <br /> <br />
-            <form action="input.php" method="POST" name="myForm">
+            <form action="input.php" method="post" name="myForm">
                 <center>
                     <div id="html_element"></div>
                 </center>
