--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css" />
     <script src="app.js"></script>
     <title>SVCE - Feedback</title>
-</head> 
+</head>
 
 <body>
 
@@ -17,7 +17,7 @@
         <div class="jumbotron text-center" style="margin-top : 11%">
             <img src="assets/svce.png" alt="svce logo" width="20%" height="20%" />
             <br /> <br />
-            <form action="input.php" method="post" name="myForm">
+            <form action="input.html" method="post" name="myForm">
                 <center>
                     <div id="html_element"></div>
                 </center>
