--- a/input.html
+++ b/input.html
@@ -29,12 +29,10 @@
     </script>
   </head>
   <body>
-    <div class="container">
+    <div class="container mt-5">
 
-      <div class="fixed-top" style="background-color:white;">
-        <div class="progress " style=" height: 40px;">
-          <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">0%</div>
-        </div>
+      <div class="progress fixed-top" style=" height: 40px;background-color:white;">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" id="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">0%</div>
       </div>
 
       <form action="post.php" method="post">
