--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 </head>
 
 <body>
+  <!-- Just an image -->
+    <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+      <img src="assets/svce.png" width="30" height="30" alt="SVCE">
+    </a>
+    <div class="">
+      <a class="btn btn-info" href="print.php">view results</a>
+    </div>
+    </nav>
     <center>
-    <div class="container mt-3">
+    <div class="container mt-1">
       <img src="assets/svce.png" alt="svce-logo"><br><h1>SVCE Feedback Form</h1><br><br>
       <div class="row">
 
@@ -22,7 +31,7 @@
             <div class="card hovering">
               <div class="card-body">
                 <h1>Students</h1><br><br>
-                <span class="btn btn-success">Click here to enter Student Feedback</span>
+                <span class="btn btn-light">Click here to enter Student Feedback</span>
               </div>
             </div>
           </a>
@@ -33,7 +42,7 @@
             <div class="card hovering">
               <div class="card-body">
                 <h1>Parent</h1><br><br>
-                <span class="btn btn-success">Click here to enter Parent Feedback</span>
+                <span class="btn btn-light">Click here to enter Parent Feedback</span>
               </div>
             </div>
           </a>
@@ -44,7 +53,7 @@
             <div class="card hovering">
               <div class="card-body">
                 <h1>Alumni</h1><br><br />
-                <span class="btn btn-success">Click here to enter Alumni Feedback</span>
+                <span class="btn btn-light">Click here to enter Alumni Feedback</span>
               </div>
             </div>
           </a>
